--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,10 +9,10 @@ repos:
     -   id: check-yaml
     -   id: check-added-large-files
     -   id: check-merge-conflict
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v1.8.0'
-    hooks:
-    -   id: mypy
+# -   repo: https://github.com/pre-commit/mirrors-mypy
+#     rev: 'v1.8.0'
+#     hooks:
+#     -   id: mypy
 -   repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.4.4
     hooks:
