--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
     -   id: check-yaml
-    -   id: check-added-large-files
+    # -   id: check-added-large-files
     -   id: check-merge-conflict
 # -   repo: https://github.com/pre-commit/mirrors-mypy
 #     rev: 'v1.8.0'
